10_lab-10/deployment-wordpress.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: wordpress-deployment
spec:
   selector:
      matchLabels:
        app: wordpress
   template:
      metadata:
        labels:
          app: wordpress
      spec:
        containers:
          - name: wordpress-pod
            image: wordpress:latest
            ports:
              - containerPort: 80
            volumeMounts:
              - name: data-wordpress-volume
                mountPath: /var/www/html
        volumes:
          - name: data-wordpress-volume
            nfs:
              server: "10.101.153.25" 
              path: /wordpress/
